Fixed comments for starting the tests by hand.